objects/Rental_Schedule__c.object
<CustomObject>
    <description>ABC calculation new object called Rental schedule for TPO FR</description>
    <fields>
        <fullName>Customer_Downpayment_Type__c</fullName>
        <label>Customer Downpayment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payments_to_the_customer_1__c</fullName>
        <description>New field used for ABC calculation for TPO FR</description>
        <label>Payments to the customer_1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payments_to_the_customer_2__c</fullName>
        <description>New field used for ABC calculation for TPO FR</description>
        <label>Payments to the customer_2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <formula>Quote__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <description>Every Rental progress should look-up to a quote for ABC calculation for TPO FR</description>
        <inlineHelpText>Record to track rental terms / performance ranges of a quoted system.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Rental Schedules</relationshipLabel>
        <relationshipName>Rental_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TVs_1__c</fullName>
        <description>New field used for ABC calculation for TPO FR</description>
        <label>TVs_1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TVs_2__c</fullName>
        <description>New field used for ABC calculation for TPO FR</description>
        <label>TVs_2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rental Schedule</label>
    <nameField>
        <label>Rental Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rental Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>